[package]
name = "sandbox-links"
version = "0.1.0"
authors = ["Thalia Archibald"]
edition = "2021"
description = "A library for working with Try It Online and Attempt This Online code share links"
repository = "https://github.com/thaliaarchi/sandbox-links"
license = "GPL-3.0-or-later"
keywords = ["attempt-this-online"]
categories = ["encoding"]

[dependencies]
base64 = "0.21"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
lazy_static = "1.4"
# Compression changed in 1.1.9
libz-ng-sys = "=1.1.8"
regex = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
